--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,9 +63,10 @@
                     </div>
                 </div>
             </form>
-            <div class="navbar-nav">
-                <a href="#" class="nav-item nav-link">Login</a>
-            </div>
+            
+            <form class="form inline">
+                <button><a href="#" class="btn btn-outline-info my-2 my-sm-0" type="submit">Login</a></button>
+            </form>
         </div>
     </nav>
 </div>
