--- a/templates/payrolls.html
+++ b/templates/payrolls.html
@@ -5,7 +5,7 @@
         <div class="bs-example">
             <!-- Button trigger modal for Department-->
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newDepartment">
-                Add a new department
+                Check payroll
             </button>
         </div>
         <!-- Modal for adding Department-->
