--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 
 {% extends "layout.html" %}
 {% block content %}
-        <div class="bs-example">
+        <!--<div class="bs-example">
 
             <a href="employees" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Check Employees</a>
 
-        </div>
+        </div> -->
             <div class="bs-example">
 
                 <a href="departments" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Check Departments</a>
