--- a/templates/employees.html
+++ b/templates/employees.html
@@ -5,7 +5,7 @@
         <div class="bs-example">
             <!-- Button trigger modal for Employee-->
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newEmployee">
-                Add a new Employee
+                Add a new Employee to {{ this_department.dpt_name }} dept.
             </button>
         </div>
 
@@ -63,7 +63,8 @@
                             </div>
                             <div class="form-group">
 
-                                <input name="dpt_name" type="hidden" class="form-control" value="{{ dept_id }}">
+                                <input name="dpt_name" type="hidden" class="form-control"
+                                       value="{{ this_department.id }}">
                             </div>
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Basic Salary</label>
@@ -114,13 +115,13 @@
                 <th scope="col">Basic Salary</th>
                 <th scope="col">Allowances</th>
                 <th scope="col">Other Deductions</th>
-                <th scope="col">Department</th>
+                <th scope="col"></th>
 
             </tr>
             </thead>
 
             <tbody>
-            {% for each in employees %}
+            {% for each in this_department.employees %}
 
 
                 <tr>
@@ -137,7 +138,78 @@
                     <td>{{ each.allowances }}</td>
                     <td>{{ each.other_deductions }}</td>
                     <td>
-                        <button><a href="/payrolls/{{ each.id }}">View Payroll</a></button>
+
+                        <!-- Button trigger modal for generate Payroll-->
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newPayroll">
+                            Generate Payroll
+                        </button>
+
+                        <!--<button><a href="/payrolls/{{ each.id }}">Generate Payroll</a></button>-->
+                        <!-- Modal for adding Employee-->
+                        <div class="modal fade" id="newPayroll" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Fill details below</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="/newPayroll/{{ each.id }}" method="post">
+                                            <div class="form-group">
+
+                                                <input name="dept_name" type="hidden" class="form-control"
+                                                       value="{{ this_department.dpt_name }}">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="formGroupExampleInput">Month</label>
+                                                <input name="payroll_month" required type="text" class="form-control"
+                                                       placeholder="eg. Jan 2019"
+                                                       id="formGroupExampleInput"
+                                                >
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label for="formGroupExampleInput">Overtime</label>
+                                                <input name="overtime" required type="number" value=0
+                                                       class="form-control"
+                                                       id="formGroupExampleInput"
+                                                >
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label for="formGroupExampleInput">Salary advance</label>
+                                                <input name="salary_advance" placeholder="eg. Loans" value=0 required
+                                                       type="number"
+                                                       class="form-control"
+                                                       id="formGroupExampleInput"
+                                                >
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="formGroupExampleInput">Other deductions</label>
+                                                <input name="other_deductions" placeholder="eg. Loans" value=0 required
+                                                       type="number"
+                                                       class="form-control"
+                                                       id="formGroupExampleInput"
+                                                >
+                                            </div>
+
+                                            <div class="form-group">
+                                                <input type="submit" class="form-control btn-primary">
+                                            </div>
+
+                                        </form>
+                                    </div>
+                                    <!--<div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>-->
+                                </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
             {% endfor %}
