--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,25 @@
-
 {% extends "layout.html" %}
 {% block content %}
-        <!--<div class="bs-example">
+    <!--<div class="bs-example">
 
-            <a href="employees" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Check Employees</a>
+        <a href="employees" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Check Employees</a>
 
-        </div> -->
-            <div class="bs-example">
+    </div> -->
+    <div class="bs-example">
 
-                <a href="departments" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Check Departments</a>
+        <a href="login" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Log in</a>
 
-        </div>
+    </div>
+    <div class="bs-example">
+
+        <a href="registration" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Register</a>
+
+    </div>
+    <div class="bs-example">
+
+        <a href="departments" class="btn btn-lg btn-block btn-outline-info" role="button" aria-pressed="true">Check
+            Departments</a>
+
+    </div>
 {% endblock %}
 
