--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,9 @@
     <title>Payroll</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <style type="text/css">
         .bs-example {
@@ -63,10 +66,8 @@
                     </div>
                 </div>
             </form>
-            
-            <form class="form inline">
-                <button><a href="#" class="btn btn-outline-info my-2 my-sm-0" type="submit">Login</a></button>
-            </form>
+
+
         </div>
     </nav>
 </div>
