--- a/templates/login.html
+++ b/templates/login.html
@@ -51,7 +51,7 @@
         <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-user-tie"></i></span>
         </div>
-        <input type="text" name="" class="form-control" placeholder="username or email"/>
+        <input type="email" name="" class="form-control" placeholder="username or email"/>
     </div>
     <br/>
 
@@ -59,7 +59,7 @@
         <div class="input-group-prepend">
             <span class="input-group-text"><i class="fa fa-key icon"></i></span>
         </div>
-        <input type="Password" name="" class="form-control" placeholder="password"/>
+        <input type="Password" name="password" class="form-control" placeholder="password"/>
     </div>
     <br/>
     <div class="checkbox">
