--- a/templates/payrolls.html
+++ b/templates/payrolls.html
@@ -28,7 +28,7 @@
 
             <tbody>
 
-            {% for each in this_payroll_employee.emp_payrolls %}
+            {% for each in this_employee.emp_payrolls %}
                 <tr>
                     <th scope="row">{{ each.id }}</th>
                     <td>{{ each.employee_id }}</td>
